Bare minimum of html code, minor bugfix to player

--- a/GameLog.html
+++ b/GameLog.html
@@ -1,37 +1,126 @@
 <html><head><link href = "styles/style.css" rel = "stylesheet" / ><title> Syzygy </title></head><body><body style="background-color:#363f45"><h1> INTRODUCING </h1>"""<p>Player 0
-	NAV Skill: 0.83
-	ENG Skill: 0.08
-	SCI Skill: 0.32
-	DEF Skill: 0.1
-</p><p>Player 1: THE SABOTEUR
-	NAV Skill: 0.27
-	ENG Skill: 0.48
-	SCI Skill: 0.49
-	DEF Skill: 0.91
+	NAV Skill: 0.98
+	ENG Skill: 0.97
+	SCI Skill: 0.52
+	DEF Skill: 0.06
+</p><p>Player 1
+	NAV Skill: 0.18
+	ENG Skill: 0.06
+	SCI Skill: 0.31
+	DEF Skill: 0.32
 </p><p>Player 2
-	NAV Skill: 0.99
-	ENG Skill: 0.63
-	SCI Skill: 0.97
-	DEF Skill: 0.15
+	NAV Skill: 0.78
+	ENG Skill: 0.81
+	SCI Skill: 0.13
+	DEF Skill: 0.54
 </p><p>Player 3
-	NAV Skill: 0.0
-	ENG Skill: 0.55
-	SCI Skill: 0.41
-	DEF Skill: 0.19
-</p><p>Player 4
-	NAV Skill: 0.71
-	ENG Skill: 0.88
-	SCI Skill: 0.3
+	NAV Skill: 0.08
+	ENG Skill: 0.82
+	SCI Skill: 0.01
 	DEF Skill: 0.4
-</p><p>Player 5
-	NAV Skill: 0.64
-	ENG Skill: 0.32
-	SCI Skill: 0.76
-	DEF Skill: 0.86
+</p><p>Player 4
+	NAV Skill: 0.44
+	ENG Skill: 0.43
+	SCI Skill: 0.44
+	DEF Skill: 0.42
+</p><p>Player 5: THE SABOTEUR
+	NAV Skill: 0.51
+	ENG Skill: 0.64
+	SCI Skill: 0.67
+	DEF Skill: 0.02
 </p><p>
 ---ROUND 1---
 SCORE: {'NAV': 6, 'ENG': 6, 'SCI': 6, 'DEF': 6}
-<p><p>Mission Options: ['ENG', 'NAV']
+<p><p>Mission Options: ['NAV', 'ENG']
 Selected Mission: NAV
-<p><p>Mission will lose the team 0 from NAV
+<p><p>Mission will lose the team 3 from NAV
+</p><p>In NAV
+	Players [0, 5, 4, 3, 2, 1]
+</p><p>	NAV: Player 0 chooses not to FLIP
+	NAV: SABOTEUR chooses to SABOTAGE
+	NAV: Player 4 chooses not to FLIP
+	NAV: Player 3 chooses not to FLIP
+	NAV: Player 2 chooses to FLIP
+	NAV: Player 1 chooses to FLIP
+</p><p>	The NAV team was SUCCESSFUL!
+</p><p>	Team scored -2 points for room
+</p><p></p><p></p><p></p><p>Player relationships updated
+</p><p>
+---ROUND 2---
+SCORE: {'NAV': 1, 'ENG': 6, 'SCI': 6, 'DEF': 6}
+<p><p>Mission Options: ['ENG', 'SCI']
+Selected Mission: SCI
+<p><p>Mission will lose the team 2 from SCI
+</p><p>In NAV
+	Players [3, 5, 4, 2]
+</p><p>	NAV: Player 3 chooses not to FLIP
+	NAV: SABOTEUR chooses to SABOTAGE
+	NAV: Player 4 chooses not to FLIP
+	NAV: Player 2 chooses to FLIP
+</p><p>	The NAV team was SUCCESSFUL!
+</p><p>	Team scored -2 points for room
+</p><p></p><p>In SCI
+	Players [1, 0]
+</p><p>	SCI: Player 1 chooses not to FLIP
+	SCI: Player 0 chooses to FLIP
+</p><p>	The SCI team was SUCCESSFUL!
+</p><p>	Team scored 0 points for room
+</p><p></p><p>Player relationships updated
+</p><p>
+---ROUND 3---
+SCORE: {'NAV': -1, 'ENG': 6, 'SCI': 4, 'DEF': 6}
+<p><p>Mission Options: ['DEF', 'DEF']
+Selected Mission: DEF
+<p><p>Mission will lose the team 2 from DEF
+</p><p>In NAV
+	Players [0, 1, 5, 4, 3, 2]
+</p><p>	NAV: Player 0 chooses not to FLIP
+	NAV: Player 1 chooses to FLIP
+	NAV: SABOTEUR chooses to SABOTAGE
+	NAV: Player 4 chooses not to FLIP
+	NAV: Player 3 chooses not to FLIP
+	NAV: Player 2 chooses to FLIP
+</p><p>	The NAV team was NOT SUCCESSFUL
+</p><p>	Team scored 0 points for room
+</p><p></p><p></p><p></p><p>Player relationships updated
+</p><p>
+---ROUND 4---
+SCORE: {'NAV': -1, 'ENG': 6, 'SCI': 4, 'DEF': 4}
+<p><p>Mission Options: ['NAV', 'SCI']
+Selected Mission: SCI
+<p><p>Mission will lose the team 3 from SCI
+</p><p>In NAV
+	Players [0, 1, 5]
+</p><p>	NAV: Player 0 chooses not to FLIP
+	NAV: Player 1 chooses to FLIP
+	NAV: SABOTEUR chooses to SABOTAGE
+</p><p>	The NAV team was SUCCESSFUL!
+</p><p>	Team scored -1 points for room
+</p><p></p><p>In SCI
+	Players [4, 3, 2]
+</p><p>	SCI: Player 4 chooses not to FLIP
+	SCI: Player 3 chooses to FLIP
+	SCI: Player 2 chooses to FLIP
+</p><p>	The SCI team was NOT SUCCESSFUL
+</p><p>	Team scored 0 points for room
+</p><p></p><p>Player relationships updated
+</p><p>
+---ROUND 5---
+SCORE: {'NAV': -2, 'ENG': 6, 'SCI': 1, 'DEF': 4}
+<p><p>Mission Options: ['NAV', 'NAV']
+Selected Mission: NAV
+<p><p>Mission will lose the team 3 from NAV
+</p><p>In NAV
+	Players [0, 4, 3, 2, 5, 1]
+</p><p>	NAV: Player 0 chooses not to FLIP
+	NAV: Player 4 chooses to FLIP
+	NAV: Player 3 chooses to FLIP
+	NAV: Player 2 chooses to FLIP
+	NAV: SABOTEUR chooses to SABOTAGE
+	NAV: Player 1 chooses to FLIP
+</p><p>	The NAV team was SUCCESSFUL!
+</p><p>	Team scored 2 points for room
+</p><p></p><p></p><p></p><p>Player relationships updated
+</p><p>Final Score: {'NAV': -3, 'ENG': 6, 'SCI': 1, 'DEF': 4}
+The SABOTEUR has won! The team did not successfully stop them.
 <p></body</html>
