--- a/GameLog.html
+++ b/GameLog.html
@@ -1,108 +1,46 @@
-<html><head><link href = "styles/style.css" rel = "stylesheet" / ><title> Syzygy </title></head><body><body style="background-color:#363f45"><h1> INTRODUCING </h1>"""<p>Player 0
-	NAV Skill: 0.83
-	ENG Skill: 1.0
-	SCI Skill: 0.96
-	DEF Skill: 0.98
-</p><p>Player 1
-	NAV Skill: 0.49
-	ENG Skill: 0.75
+<html><head><link href = "styles/style.css" rel = "stylesheet" / ><title> Syzygy </title></head><body><h1> INTRODUCING </h1>"""<h2>Player 0</h2><p>
+	NAV Skill: 0.65
+	ENG Skill: 0.96
+	SCI Skill: 0.26
+	DEF Skill: 0.28
+</p><h2>Player 1</h2><p>
+	NAV Skill: 0.55
+	ENG Skill: 0.61
 	SCI Skill: 0.41
-	DEF Skill: 0.8
-</p><p>Player 2
-	NAV Skill: 0.38
-	ENG Skill: 0.94
+	DEF Skill: 0.75
+</p><h2>Player 2</h2><p>
+	NAV Skill: 0.72
+	ENG Skill: 0.6
+	SCI Skill: 0.26
+	DEF Skill: 0.35
+</p><h2>Player 3</h2><p>: THE SABOTEUR
+	NAV Skill: 0.17
+	ENG Skill: 0.57
 	SCI Skill: 0.76
-	DEF Skill: 0.32
-</p><p>Player 3: THE SABOTEUR
-	NAV Skill: 0.64
-	ENG Skill: 0.83
-	SCI Skill: 0.99
-	DEF Skill: 0.27
-</p><p>Player 4
-	NAV Skill: 0.92
-	ENG Skill: 0.8
-	SCI Skill: 0.81
-	DEF Skill: 0.15
-</p><p>Player 5
-	NAV Skill: 0.06
-	ENG Skill: 0.92
-	SCI Skill: 0.21
-	DEF Skill: 0.74
-</p><p>
----ROUND 1---
-SCORE: {'NAV': 6, 'ENG': 6, 'SCI': 6, 'DEF': 6}
-<p><p>Mission Options: ['SCI', 'NAV']
-Selected Mission: SCI
-<p><p>Mission will lose the team 0 from SCI
-</p><p></p><p></p><p></p><p></p><p>Player relationships updated
-</p><p>
----ROUND 2---
-SCORE: {'NAV': 6, 'ENG': 6, 'SCI': 6, 'DEF': 6}
-<p><p>Mission Options: ['DEF', 'DEF']
-Selected Mission: DEF
-<p><p>Mission will lose the team 3 from DEF
-</p><p></p><p></p><p></p><p>In DEF
-	Players [0, 5, 4, 3, 2, 1]
-</p><p>	DEF: Player 0 chooses not to FLIP
-	DEF: Player 5 chooses not to FLIP
-	DEF: Player 4 chooses not to FLIP
-	DEF: SABOTEUR chooses to SABOTAGE
-	DEF: Player 2 chooses not to FLIP
-	DEF: Player 1 chooses not to FLIP
-</p><p>	The DEF team was SUCCESSFUL!
-</p><p>	Team scored -6 points for room
-</p><p>Player relationships updated
-</p><p>
----ROUND 3---
-SCORE: {'NAV': 6, 'ENG': 6, 'SCI': 6, 'DEF': -3}
-<p><p>Mission Options: ['ENG', 'DEF']
-Selected Mission: ENG
-<p><p>Mission will lose the team 0 from ENG
-</p><p></p><p></p><p></p><p>In DEF
-	Players [0, 5, 4, 3, 2, 1]
-</p><p>	DEF: Player 0 chooses not to FLIP
-	DEF: Player 5 chooses not to FLIP
-	DEF: Player 4 chooses not to FLIP
-	DEF: SABOTEUR chooses to SABOTAGE
-	DEF: Player 2 chooses not to FLIP
-	DEF: Player 1 chooses to FLIP
-</p><p>	The DEF team was SUCCESSFUL!
-</p><p>	Team scored -4 points for room
-</p><p>Player relationships updated
-</p><p>
----ROUND 4---
-SCORE: {'NAV': 6, 'ENG': 6, 'SCI': 6, 'DEF': -7}
-<p><p>Mission Options: ['DEF', 'SCI']
-Selected Mission: SCI
-<p><p>Mission will lose the team 0 from SCI
-</p><p></p><p></p><p></p><p>In DEF
-	Players [0, 5, 4, 3, 2, 1]
-</p><p>	DEF: Player 0 chooses not to FLIP
-	DEF: Player 5 chooses not to FLIP
-	DEF: Player 4 chooses not to FLIP
-	DEF: SABOTEUR chooses to SABOTAGE
-	DEF: Player 2 chooses not to FLIP
-	DEF: Player 1 chooses to FLIP
-</p><p>	The DEF team was SUCCESSFUL!
-</p><p>	Team scored -4 points for room
-</p><p>Player relationships updated
-</p><p>
----ROUND 5---
-SCORE: {'NAV': 6, 'ENG': 6, 'SCI': 6, 'DEF': -11}
-<p><p>Mission Options: ['NAV', 'DEF']
-Selected Mission: NAV
-<p><p>Mission will lose the team 2 from NAV
-</p><p></p><p></p><p></p><p>In DEF
-	Players [0, 5, 4, 3, 2, 1]
-</p><p>	DEF: Player 0 chooses not to FLIP
-	DEF: Player 5 chooses not to FLIP
-	DEF: Player 4 chooses not to FLIP
-	DEF: SABOTEUR chooses to SABOTAGE
-	DEF: Player 2 chooses not to FLIP
-	DEF: Player 1 chooses to FLIP
-</p><p>	The DEF team was SUCCESSFUL!
-</p><p>	Team scored -4 points for room
-</p><p>Player relationships updated
-</p><p>Final Score: {'NAV': 4, 'ENG': 6, 'SCI': 6, 'DEF': -15}
-The SABOTEUR has won! The team did not successfully stop them.
-<p></body</html>
+	DEF Skill: 0.25
+</p><h2>Player 4</h2><p>
+	NAV Skill: 0.38
+	ENG Skill: 0.2
+	SCI Skill: 0.45
+	DEF Skill: 0.41
+</p><h2>Player 5</h2><p>
+	NAV Skill: 0.48
+	ENG Skill: 0.01
+	SCI Skill: 0.2
+	DEF Skill: 0.87
+</p>
+<h1>---ROUND 1---</h1>
+<h2>SCORE: {'NAV': 6, 'ENG': 6, 'SCI': 6, 'DEF': 6}</h2><p> Mission Options: ['DEF', 'NAV']</p><p> Selected Mission: NAV</p> <p> NAV -0  </p><h2> NAV </h2><p>Player 0: no flip </p><p>Player 5: no flip </p><p>Player 4: FLIP</p><p>Player 3: SABOTAGE</p><p>Player 2: no flip </p><p>Player 1: no flip </p><p>The NAV team was NOT SUCCESSFUL</p><p>NAV: +0</p><p>Player relationships updated
+</p>
+<h1>---ROUND 2---</h1>
+<h2>SCORE: {'NAV': 6, 'ENG': 6, 'SCI': 6, 'DEF': 6}</h2><p> Mission Options: ['NAV', 'NAV']</p><p> Selected Mission: NAV</p> <p> NAV -1  </p><h2> NAV </h2><p>Player 0: no flip </p><p>Player 5: no flip </p><p>Player 4: FLIP</p><p>Player 3: SABOTAGE</p><p>Player 2: no flip </p><p>Player 1: no flip </p><p>The NAV team was SUCCESSFUL!</p><p>NAV: +-4</p><p>Player relationships updated
+</p>
+<h1>---ROUND 3---</h1>
+<h2>SCORE: {'NAV': 1, 'ENG': 6, 'SCI': 6, 'DEF': 6}</h2><p> Mission Options: ['NAV', 'DEF']</p><p> Selected Mission: NAV</p> <p> NAV -2  </p><h2> NAV </h2><p>Player 0: no flip </p><p>Player 5: no flip </p><p>Player 4: FLIP</p><p>Player 3: SABOTAGE</p><p>Player 2: no flip </p><p>Player 1: no flip </p><p>The NAV team was SUCCESSFUL!</p><p>NAV: +-4</p><p>Player relationships updated
+</p>
+<h1>---ROUND 4---</h1>
+<h2>SCORE: {'NAV': -5, 'ENG': 6, 'SCI': 6, 'DEF': 6}</h2><p> Mission Options: ['SCI', 'SCI']</p><p> Selected Mission: SCI</p> <p> SCI -1  </p><h2> NAV </h2><p>Player 0: no flip </p><p>Player 5: no flip </p><p>Player 4: FLIP</p><p>Player 3: SABOTAGE</p><p>Player 2: no flip </p><p>Player 1: FLIP</p><p>The NAV team was SUCCESSFUL!</p><p>NAV: +-2</p><p>Player relationships updated
+</p>
+<h1>---ROUND 5---</h1>
+<h2>SCORE: {'NAV': -7, 'ENG': 6, 'SCI': 5, 'DEF': 6}</h2><p> Mission Options: ['NAV', 'SCI']</p><p> Selected Mission: SCI</p> <p> SCI -0  </p><h2> NAV </h2><p>Player 0: no flip </p><p>Player 5: no flip </p><p>Player 4: FLIP</p><p>Player 3: SABOTAGE</p><p>Player 2: FLIP</p><p>Player 1: FLIP</p><p>The NAV team was NOT SUCCESSFUL</p><p>NAV: +0</p><p>Player relationships updated
+</p><h2>Final Score: {'NAV': -7, 'ENG': 6, 'SCI': 5, 'DEF': 6}</h2><h2>The SABOTEUR has won! The team did not successfully stop them.</h2></body</html>
