removed print statements. HTML improvements. Still a mess, but getting better.

--- a/GameLog.html
+++ b/GameLog.html
@@ -1,46 +1,11 @@
-<html><head><link href = "styles/style.css" rel = "stylesheet" / ><title> Syzygy </title></head><body><h1> INTRODUCING </h1>"""<h2>Player 0</h2><p>
-	NAV Skill: 0.65
-	ENG Skill: 0.96
-	SCI Skill: 0.26
-	DEF Skill: 0.28
-</p><h2>Player 1</h2><p>
-	NAV Skill: 0.55
-	ENG Skill: 0.61
-	SCI Skill: 0.41
-	DEF Skill: 0.75
-</p><h2>Player 2</h2><p>
-	NAV Skill: 0.72
-	ENG Skill: 0.6
-	SCI Skill: 0.26
-	DEF Skill: 0.35
-</p><h2>Player 3</h2><p>: THE SABOTEUR
-	NAV Skill: 0.17
-	ENG Skill: 0.57
-	SCI Skill: 0.76
-	DEF Skill: 0.25
-</p><h2>Player 4</h2><p>
-	NAV Skill: 0.38
-	ENG Skill: 0.2
-	SCI Skill: 0.45
-	DEF Skill: 0.41
-</p><h2>Player 5</h2><p>
-	NAV Skill: 0.48
-	ENG Skill: 0.01
-	SCI Skill: 0.2
-	DEF Skill: 0.87
-</p>
-<h1>---ROUND 1---</h1>
-<h2>SCORE: {'NAV': 6, 'ENG': 6, 'SCI': 6, 'DEF': 6}</h2><p> Mission Options: ['DEF', 'NAV']</p><p> Selected Mission: NAV</p> <p> NAV -0  </p><h2> NAV </h2><p>Player 0: no flip </p><p>Player 5: no flip </p><p>Player 4: FLIP</p><p>Player 3: SABOTAGE</p><p>Player 2: no flip </p><p>Player 1: no flip </p><p>The NAV team was NOT SUCCESSFUL</p><p>NAV: +0</p><p>Player relationships updated
-</p>
-<h1>---ROUND 2---</h1>
-<h2>SCORE: {'NAV': 6, 'ENG': 6, 'SCI': 6, 'DEF': 6}</h2><p> Mission Options: ['NAV', 'NAV']</p><p> Selected Mission: NAV</p> <p> NAV -1  </p><h2> NAV </h2><p>Player 0: no flip </p><p>Player 5: no flip </p><p>Player 4: FLIP</p><p>Player 3: SABOTAGE</p><p>Player 2: no flip </p><p>Player 1: no flip </p><p>The NAV team was SUCCESSFUL!</p><p>NAV: +-4</p><p>Player relationships updated
-</p>
-<h1>---ROUND 3---</h1>
-<h2>SCORE: {'NAV': 1, 'ENG': 6, 'SCI': 6, 'DEF': 6}</h2><p> Mission Options: ['NAV', 'DEF']</p><p> Selected Mission: NAV</p> <p> NAV -2  </p><h2> NAV </h2><p>Player 0: no flip </p><p>Player 5: no flip </p><p>Player 4: FLIP</p><p>Player 3: SABOTAGE</p><p>Player 2: no flip </p><p>Player 1: no flip </p><p>The NAV team was SUCCESSFUL!</p><p>NAV: +-4</p><p>Player relationships updated
-</p>
-<h1>---ROUND 4---</h1>
-<h2>SCORE: {'NAV': -5, 'ENG': 6, 'SCI': 6, 'DEF': 6}</h2><p> Mission Options: ['SCI', 'SCI']</p><p> Selected Mission: SCI</p> <p> SCI -1  </p><h2> NAV </h2><p>Player 0: no flip </p><p>Player 5: no flip </p><p>Player 4: FLIP</p><p>Player 3: SABOTAGE</p><p>Player 2: no flip </p><p>Player 1: FLIP</p><p>The NAV team was SUCCESSFUL!</p><p>NAV: +-2</p><p>Player relationships updated
-</p>
-<h1>---ROUND 5---</h1>
-<h2>SCORE: {'NAV': -7, 'ENG': 6, 'SCI': 5, 'DEF': 6}</h2><p> Mission Options: ['NAV', 'SCI']</p><p> Selected Mission: SCI</p> <p> SCI -0  </p><h2> NAV </h2><p>Player 0: no flip </p><p>Player 5: no flip </p><p>Player 4: FLIP</p><p>Player 3: SABOTAGE</p><p>Player 2: FLIP</p><p>Player 1: FLIP</p><p>The NAV team was NOT SUCCESSFUL</p><p>NAV: +0</p><p>Player relationships updated
-</p><h2>Final Score: {'NAV': -7, 'ENG': 6, 'SCI': 5, 'DEF': 6}</h2><h2>The SABOTEUR has won! The team did not successfully stop them.</h2></body</html>
+<html><head><link href = "styles/style.css" rel = "stylesheet" / ><title> Syzygy </title></head><body><h1> INTRODUCING </h1><table style="width:100%"><tr><th>Player 0</th><th>Player 1</th><th>Player 2</th><th>Player 3</th><th>Player 4</th><th>Player 5</th></tr><tr><td>NAV Skill: 0.96<br>ENG Skill: 0.23<br>SCI Skill: 0.83<br>DEF Skill: 0.87<br></td><td>NAV Skill: 0.62<br>ENG Skill: 0.79<br>SCI Skill: 0.97<br>DEF Skill: 0.41<br></td><td>NAV Skill: 0.97<br>ENG Skill: 0.91<br>SCI Skill: 0.25<br>DEF Skill: 0.02<br></td><td>THE SABOTEUR <br>NAV Skill: 0.1<br>ENG Skill: 1.0<br>SCI Skill: 0.08<br>DEF Skill: 0.01<br></td><td>NAV Skill: 0.01<br>ENG Skill: 0.51<br>SCI Skill: 0.58<br>DEF Skill: 0.8<br></td><td>NAV Skill: 0.56<br>ENG Skill: 0.11<br>SCI Skill: 0.94<br>DEF Skill: 0.62<br></td></tr></table><br><br><table style="width:100%"><tr>
+<th>ROUND 1</th>
+<td>SCORE: {'NAV': 6, 'ENG': 6, 'SCI': 6, 'DEF': 6}</td><td> Mission Options: ['DEF', 'ENG']</td><td> Selected Mission: ENG</td> <td> ENG -3  </td><td><td><h2> ENG </h2><p>Player 0: FLIP</p><p>Player 5: FLIP</p><p>Player 4: FLIP</p><p>Player 3: SABOTAGE</p><p>Player 2: FLIP</p><p>Player 1: FLIP</p><p>The ENG team was SUCCESSFUL!</p><p>ENG: +4</p></td><td><td><td></td></table><br><br><table style="width:100%"><tr>
+<th>ROUND 2</th>
+<td>SCORE: {'NAV': 6, 'ENG': 7, 'SCI': 6, 'DEF': 6}</td><td> Mission Options: ['NAV', 'DEF']</td><td> Selected Mission: NAV</td> <td> NAV -0  </td><td><h2> NAV </h2><p>Player 5: no flip </p><p>Player 4: no flip </p><p>Player 3: SABOTAGE</p><p>Player 2: no flip </p><p>The NAV team was NOT SUCCESSFUL</p><p>NAV: +0</p></td><td><td><h2> SCI </h2><p>Player 1: no flip </p><p>Player 0: no flip </p><p>The SCI team was SUCCESSFUL!</p><p>SCI: +2</p></td><td><td></td></table><br><br><table style="width:100%"><tr>
+<th>ROUND 3</th>
+<td>SCORE: {'NAV': 6, 'ENG': 7, 'SCI': 8, 'DEF': 6}</td><td> Mission Options: ['ENG', 'DEF']</td><td> Selected Mission: ENG</td> <td> ENG -2  </td><td><h2> NAV </h2><p>Player 2: no flip </p><p>Player 3: SABOTAGE</p><p>The NAV team was SUCCESSFUL!</p><p>NAV: +-2</p></td><td><h2> ENG </h2><p>Player 0: no flip </p><p>Player 1: no flip </p><p>The ENG team was SUCCESSFUL!</p><p>ENG: +2</p></td><td><td><td></td></table><br><br><table style="width:100%"><tr>
+<th>ROUND 4</th>
+<td>SCORE: {'NAV': 4, 'ENG': 7, 'SCI': 8, 'DEF': 6}</td><td> Mission Options: ['NAV', 'SCI']</td><td> Selected Mission: SCI</td> <td> SCI -0  </td><td><h2> NAV </h2><p>Player 0: FLIP</p><p>Player 5: FLIP</p><p>Player 4: FLIP</p><p>Player 1: FLIP</p><p>Player 2: FLIP</p><p>Player 3: SABOTAGE</p><p>The NAV team was NOT SUCCESSFUL</p><p>NAV: +0</p></td><td><td><td><td></td></table><br><br><table style="width:100%"><tr>
+<th>ROUND 5</th>
+<td>SCORE: {'NAV': 4, 'ENG': 7, 'SCI': 8, 'DEF': 6}</td><td> Mission Options: ['DEF', 'NAV']</td><td> Selected Mission: NAV</td> <td> NAV -2  </td><td><h2> NAV </h2><p>Player 1: FLIP</p><p>Player 0: FLIP</p><p>Player 5: FLIP</p><p>Player 4: FLIP</p><p>Player 3: SABOTAGE</p><p>Player 2: FLIP</p><p>The NAV team was SUCCESSFUL!</p><p>NAV: +4</p></td><td><td><td><td></td></table><h2>Final Score: {'NAV': 6, 'ENG': 7, 'SCI': 8, 'DEF': 6}</h2><h2>The TEAM Wins! The Saboteur was unsuccessful.</h2></body</html>
